# pumpfundeplyerbot

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  start-bot-with-env.sh  start-bot.sh  start-simplified.sh  tsconfig.json
config/: config.example.json  config.json
src/backend/: api_server.rs  jito_bundle.rs  lib.rs  main.rs  pump_fun.rs  types.rs
src/frontend/: index.ts  simple-bot.ts
src/frontend/bot/: callback-handler.ts  command-handler.ts  user-manager.ts
src/frontend/server/: api-server.ts  jito-bundle.ts  main.ts  pumpfun-client.ts  ts-server.ts
src/frontend/ts-jito-cleint/: api-server.ts  pumpfun-client.ts
src/frontend/types/: index.ts  pumpfun.d.ts
src/frontend/utils/: formatters.ts  jito-bundle-client.ts  rust-api-client.ts
src/frontend/wallet/: wallet-manager.ts
tests/integration/: test-real-integration.js
