[package]
name = "pump-swap-bot"
version = "1.0.0"
edition = "2021"
authors = ["Pump Swap Bot Team"]
description = "Professional Telegram bot for Pump.Fun token creation and MEV-protected trading"
license = "MIT"
repository = "https://github.com/pump-swap-bot/pump-swap-bot"
keywords = ["solana", "telegram", "bot", "pump-fun", "mev", "trading"]
categories = ["blockchain", "api-bindings", "cryptography"]

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
solana-client = "1.17"
solana-sdk = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
base64 = "0.21"
bs58 = "0.5"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"

[lib]
name = "pump_swap_bot"
path = "src/backend/lib.rs"

[[bin]]
name = "pump-swap-bot"
path = "src/backend/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 